--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,11 @@
 ---
-# Worker Configure
 - name: "change mode"
   file:
        path: "{{ item.path }}"
        mode: "go=wxr"
        state: directory
   loop:
-  - { path: "{{ dir }}" }
+  - {path: "{{ dir }}"}
 - name: "configuring yum for kubeadm"
   yum_repository:
        name: "kubernetes"
@@ -15,31 +14,30 @@
        enabled: yes
        repo_gpgcheck: yes
        gpgcheck: yes
-       gpgkey: 
-       -  "{{ gpgkey }}"
-       -  "https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg"
+       gpgkey:
+       - "{{ gpgkey }}"
+       - "https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg"
 - name: "installing kubelet,  kubeadm & kubectl"
   yum:
         name: "{{ item.package_name }}"
         disable_excludes: "kubernetes"
-        state: present 
+        state: present
   loop:
-  -   {  package_name: "{{ softwares }}"  }
+  - {package_name: "{{ softwares }}"}
 - name: "insatll docker and iproute"
   package: 
         name: "{{ item.name }}"
   loop:
-  -  { name: "docker" }
-  -  { name: "iproute-tc" }
+  - {name: "docker"}
+  - {name: "iproute-tc"}
 - name: "starting, enabling docker and kubelet"
   service:
         name: "{{ item.name }}"
         enabled: yes
         state: started
   loop:
-  -   {  name: "docker"  }
-  -   {  name: "kubelet" }
-
+  - {name: "docker"}
+  - {name: "kubelet"}
 - name: "pulling images ..."
   shell:
         cmd: "kubeadm config images pull"
@@ -47,14 +45,12 @@
        path: "{{ item.path }}"
        state: touch
   loop:
-  -  {  path: "{{ CreateFile[0] }}"  }
-  -  {  path: "{{ CreateFile[1] }}"  }
+  - {path: "{{ CreateFile[0] }}"}
+  - {path: "{{ CreateFile[1] }}"}
 - name: "Creating daemon.json file inside /etc/docker"
   shell: |
       cat <<EOF | sudo tee  "{{ CreateFile[0] }}"
-      {
-      "exec-opts": ["native.cgroupdriver=systemd"]
-      }
+      {"exec-opts": ["native.cgroupdriver=systemd"]}
       EOF
   changed_when: false
 - name: "Re-starting Docker"
